--- a/script-git-commands/package.json
+++ b/script-git-commands/package.json
@@ -4,7 +4,10 @@
   "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "init-repo": "node initRepository.js"
+    "init-repo": "node src/initRepo.js",
+    "pull-repo": "node src/pullRepo.js",
+    "push-repo": "node src/pullRepo.js",
+    "test": "node src/test.js"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
