add: script git commands with child process

--- a/script-git-commands/package.json
+++ b/script-git-commands/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "init-repo": "node src/initRepo.js",
     "pull-repo": "node src/pullRepo.js",
-    "push-repo": "node src/pullRepo.js",
-    "test": "node src/test.js"
+    "push-repo": "node src/pushRepo.js",
+    "test-repo": "node src/test.js"
   },
   "devDependencies": {
     "dotenv": "^8.2.0"
